--- a/index.html
+++ b/index.html
@@ -59,4 +59,30 @@
                    21.8h-.01a9.74 9.74 0 01-4.97-1.36l-.36-.22-3.62.95.97-3.52-.24-.37a9.73 
                    9.73 0 01-1.5-5.22c.01-5.38 4.38-9.75 9.75-9.75a9.72 9.72 0 016.9 2.86 
                    9.72 9.72 0 012.85 6.9c0 5.38-4.38 9.73-9.77 9.73zm5.34-7.3c-.29-.15-1.71-.84-1.97-.93-.26-.1-.45-.15-.64.15-.19.29-.74.92-.91 
-                   1.11-.17.19-.34.21-.63.07-.29-.15-1.22-.45-2.32-1.44-.86-.77-1.44-1.
+                   1.11-.17.19-.34.21-.63.07-.29-.15-1.22-.45-2.32-1.44-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.59.13-.13.29-.34.43-.51.14-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.07-.15-.64-1.55-.88-2.12-.23-.55-.47-.48-.64-.49h-.55c-.19 
+                   0-.51.07-.77.36-.26.29-1.01.98-1.01 2.39s1.03 2.77 1.17 2.96c.15.19 2.03 3.1 4.92 4.34.69.3 1.23.48 1.65.62.69.22 1.32.19 
+                   1.82.12.55-.08 1.71-.7 1.95-1.38.24-.68.24-1.27.17-1.39-.07-.12-.26-.19-.55-.34z"/>
+        </svg>
+        WhatsApp
+      </a>
+
+      <!-- Позвонить -->
+      <a href="tel:+79292929193" class="flex items-center justify-center gap-2 bg-red-500 hover:bg-red-600 text-white py-3 px-6 rounded-2xl shadow-md transition transform hover:scale-105">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.79 19.79 0 0 1 3.1 5.18 
+                   2 2 0 0 1 5 3h3a2 2 0 0 1 2 1.72c.12.81.37 
+                   1.6.73 2.33a2 2 0 0 1-.45 2.11l-1.27 
+                   1.27a16 16 0 0 0 7.27 7.27l1.27-1.27a2 
+                   2 0 0 1 2.11-.45c.73.36 1.52.61 
+                   2.33.73A2 2 0 0 1 22 16.92z"/>
+        </svg>
+        Позвонить
+      </a>
+    </div>
+
+    <!-- Подпись -->
+    <p class="text-gray-500 text-sm mt-6">© Электромонтаж СПб</p>
+  </div>
+
+</body>
+</html>
