--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Заголовок -->
     <h1 class="text-3xl font-bold">Услуги электрика</h1>
-    <p class="text-gray-400">• Монтаж под ключ • Перенос имеющихся точек</p>
+    <p class="text-gray-400">• Монтаж под ключ • Перенос розеток без пыли</p>
 
     <!-- Кнопки -->
     <div class="space-y-3">
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
